# refresh-drinks-backend

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
apps/posts/migrations/: 0001_initial.py
config/: settings.py
